--- a/index.html
+++ b/index.html
@@ -5,14 +5,109 @@
     <title>Document</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-neutral-900 py-12 px-12">
-    <div class="bg-white box-border">
-        <div class="flex justify-center font-bold text-9xl">NOMINEES
-            <div class="bg-amber-300 inline-block -rotate-[15deg] skew-x-2 text-xs px-4 py-4 pb-4 rounded-md absolute ml-96 top-32 right-96 pb-2">Cool Sites!</div>
+<body>
+    <div class="bg-neutral-900">
+        <div class="grid gap-4 grid-cols-3">
+            <div class="bg-neutral-800 block max-w-sm rounded-md m-2">
+                <div class="square bg-indigo-700 block max-w-sm p-12 m-6 items-center">
+
+                </div>
+                <div class="flex justify-center">
+                    This is some text
+                </div>
+                <div class="flex justify-content justify-center">
+                    thoughts : 4min
+                </div>
+            </div>
+            <div class="bg-neutral-800 block max-w-sm rounded-md m-2">
+                <div class="square bg-indigo-700 block max-w-sm p-12 m-6 items-center">
+
+                </div>
+                <div class="flex justify-center">
+                    This is some text
+                </div>
+                <div class="flex justify-content justify-center">
+                    thoughts : 4min
+                </div>
+            </div>
+            <div class="bg-neutral-800 block max-w-sm rounded-md m-2">
+                <div class="square bg-indigo-700 block max-w-sm p-12 m-6 items-center">
+
+                </div>
+                <div class="flex justify-center">
+                    This is some text 
+                </div>
+                <div class="flex justify-content justify-center">
+                    thoughts : 4min
+                </div>
+            </div>
+            <div class="bg-neutral-800 block max-w-sm rounded-md m-2">
+                <div class="square bg-indigo-700 block max-w-sm p-12 m-6 items-center">
+
+                </div>
+                <div class="flex justify-center">
+                    This is some text
+                </div>
+                <div class="flex justify-content justify-center">
+                    thoughts : 4min
+                </div>
+            </div>
+            <div class="bg-neutral-800 block max-w-sm rounded-md m-2">
+                <div class="square bg-indigo-700 block max-w-sm p-12 m-6 items-center">
+
+                </div>
+                <div class="flex justify-center">
+                    This is some text
+                </div>
+                <div class="flex justify-content justify-center">
+                    thoughts : 4min
+                </div>
+            </div>
+            <div class="bg-neutral-800 block max-w-sm rounded-md m-2">
+                <div class="square bg-indigo-700 block max-w-sm p-12 m-6 items-center">
+
+                </div>
+                <div class="flex justify-center">
+                    This is some text
+                </div>
+                <div class="flex justify-content justify-center">
+                    thoughts : 4min
+                </div>
+            </div>
+            <div class="bg-neutral-800 block max-w-sm rounded-md m-2">
+                <div class="square bg-indigo-700 block max-w-sm p-12 m-6 items-center">
+
+                </div>
+                <div class="flex justify-center">
+                    This is some text
+                </div>
+                <div class="flex justify-content justify-center">
+                    thoughts : 4min
+                </div>
+            </div>
+            <div class="bg-neutral-800 block max-w-sm rounded-md m-2">
+                <div class="square bg-indigo-700 block max-w-sm p-12 m-6 items-center">
+
+                </div>
+                <div class="flex justify-center">
+                    This is some text
+                </div>
+                <div class="flex justify-content justify-center">
+                    thoughts : 4min
+                </div>
+            </div>
+            <div class="bg-neutral-800 block max-w-sm rounded-md m-2">
+                <div class="square bg-indigo-700 block max-w-sm p-12 m-6 items-center">
+
+                </div>
+                <div class="flex justify-center">
+                    This is some text
+                </div>
+                <div class="flex justify-content justify-center">
+                    thoughts : 4min
+                </div>
+            </div>
         </div>
-        <!-- <div class="bg-amber-300 inline-block -rotate-45 skew-x-2 ml-[910px] px-2 py-2 rounded-md absolute pb-2">Cool Sites!</div> -->
-        <div class="flex justify-center">Vote for the latest websites on</div>
-        <div class="flex justify-center">awwwards </div>
     </div>
 </body>
 </html>
