--- a/grid.html
+++ b/grid.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
+        .body{
+            font-family: sans-serif;
+        }
+        .heading{
+            text-align: center;
+        }
         /* Base styles for the grid */
         .grid-container {
             display: grid;
@@ -41,12 +47,13 @@
     </style>
 </head>
 <body>
+    <h1 class="heading">Grocery List</h1>
     <div class="grid-container">
         <!-- Grid items (replace with your actual content) -->
-        <div class="grid-item">Item 1</div>
-        <div class="grid-item">Item 2</div>
-        <div class="grid-item">Item 3</div>
-        <div class="grid-item">Item 4</div>
+        <div class="grid-item">Eggs</div>
+        <div class="grid-item">Bread</div>
+        <div class="grid-item">Butter</div>
+        <div class="grid-item">Apples</div>
         <!-- Add more items as needed -->
     </div>
 </body>
