--- a/index.html
+++ b/index.html
@@ -3,111 +3,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="bg-neutral-900">
-        <div class="grid gap-4 grid-cols-3">
-            <div class="bg-neutral-800 block max-w-sm rounded-md m-2">
-                <div class="square bg-indigo-700 block max-w-sm p-12 m-6 items-center">
-
-                </div>
-                <div class="flex justify-center">
-                    This is some text
-                </div>
-                <div class="flex justify-content justify-center">
-                    thoughts : 4min
-                </div>
-            </div>
-            <div class="bg-neutral-800 block max-w-sm rounded-md m-2">
-                <div class="square bg-indigo-700 block max-w-sm p-12 m-6 items-center">
-
-                </div>
-                <div class="flex justify-center">
-                    This is some text
-                </div>
-                <div class="flex justify-content justify-center">
-                    thoughts : 4min
-                </div>
-            </div>
-            <div class="bg-neutral-800 block max-w-sm rounded-md m-2">
-                <div class="square bg-indigo-700 block max-w-sm p-12 m-6 items-center">
-
-                </div>
-                <div class="flex justify-center">
-                    This is some text
-                </div>
-                <div class="flex justify-content justify-center">
-                    thoughts : 4min
-                </div>
-            </div>
-            <div class="bg-neutral-800 block max-w-sm rounded-md m-2">
-                <div class="square bg-indigo-700 block max-w-sm p-12 m-6 items-center">
-
-                </div>
-                <div class="flex justify-center">
-                    This is some text
-                </div>
-                <div class="flex justify-content justify-center">
-                    thoughts : 4min
-                </div>
-            </div>
-            <div class="bg-neutral-800 block max-w-sm rounded-md m-2">
-                <div class="square bg-indigo-700 block max-w-sm p-12 m-6 items-center">
-
-                </div>
-                <div class="flex justify-center">
-                    This is some text
-                </div>
-                <div class="flex justify-content justify-center">
-                    thoughts : 4min
-                </div>
-            </div>
-            <div class="bg-neutral-800 block max-w-sm rounded-md m-2">
-                <div class="square bg-indigo-700 block max-w-sm p-12 m-6 items-center">
-
-                </div>
-                <div class="flex justify-center">
-                    This is some text
-                </div>
-                <div class="flex justify-content justify-center">
-                    thoughts : 4min
-                </div>
-            </div>
-            <div class="bg-neutral-800 block max-w-sm rounded-md m-2">
-                <div class="square bg-indigo-700 block max-w-sm p-12 m-6 items-center">
-
-                </div>
-                <div class="flex justify-center">
-                    This is some text
-                </div>
-                <div class="flex justify-content justify-center">
-                    thoughts : 4min
-                </div>
-            </div>
-            <div class="bg-neutral-800 block max-w-sm rounded-md m-2">
-                <div class="square bg-indigo-700 block max-w-sm p-12 m-6 items-center">
-
-                </div>
-                <div class="flex justify-center">
-                    This is some text
-                </div>
-                <div class="flex justify-content justify-center">
-                    thoughts : 4min
-                </div>
-            </div>
-            <div class="bg-neutral-800 block max-w-sm rounded-md m-2">
-                <div class="square bg-indigo-700 block max-w-sm p-12 m-6 items-center">
-
-                </div>
-                <div class="flex justify-center">
-                    This is some text
-                </div>
-                <div class="flex justify-content justify-center">
-                    thoughts : 4min
-                </div>
-            </div>
-        </div>
-    </div>
+    <button id="btn">Save</button>
+    <script src="index.js"></script>
 </body>
 </html>
