--- a/button.html
+++ b/button.html
@@ -3,10 +3,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="button.css">
 </head>
 <body>
     <button id="btn">Save</button>
-    <script src="index.js"></script>
+    <script src="button.js"></script>
 </body>
 </html>
